# niceview

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  SECURITY.md  TODO.md  __init__.py  dataadapter.py  fieldinfo.py  modeledit.py  modelform.py  nv-example.py  nv-sqlmodel-example.py  pyproject.toml  pytest.ini  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: CHANGELOG.md  adapters.md  components.md  dialogs.md  field-types.md
docs/img/: README.md
docs/screenshots/: README.md  apps.py  capture.py
examples/: 01_form_basic.py  02_field_types.py  03_form_binding.py  04_form_json.py  05_grid.py  06_edit_wrapper.py  07_sqlmodel.py  08_reactive_grid.py  09_drilldown.py  10_complex_form_navigation.py  11_tree_navigation.py  12_card_list.py  13_directory_drilldown.py  README.md
niceview/: NICECRUD.md  __init__.py  dataadapter.py  drilldown.py  editwrapper.py  fieldinfo.py  fields.py  form.py  grid.py  modeledit.py  modelform.py  modelgrid.py  modellist.py  modeltable.nopy  sqlmodel_adapter.py  util.py  wrapper.py
tests/: test_acceptance.py  test_acceptance_modellist.py  test_acceptance_options.py  test_acceptance_sqlmodel.py  test_dataadapter.py  test_fieldinfo.py  test_fields.py  test_lenient_loading.py  test_modeledit.py  test_modelform.py  test_ui_spike.py
