[project]
name = "niceview"
version = "0.1.0"
description = "NiceGUI adapter layer: generate forms and grids from Pydantic models"
requires-python = ">=3.12"
dependencies = [
    "nicegui>=3.0",
    "annotated-types>=0.7",
    "typing-extensions>=4.12",
]

[project.optional-dependencies]
sqlmodel = ["sqlmodel>=0.0.22"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
    "pytest-cov>=7.1.0",
    "sqlmodel>=0.0.22",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
main_file = ""
